--- a/tutorial/tutorial-color-info.adoc
+++ b/tutorial/tutorial-color-info.adoc
@@ -1,1 +1,13 @@
 = Color
+
+To change the color of an actor, use `/color`.
+
+The values are R G B, from 0.0 to 1.0.
+
+The values are multipliers for each of the channels.
+
+All `0` s is black.
+
+All `1` s is white.
+
+You can also add to the original color with `/color/add`.
