--- a/docs/extended.adoc
+++ b/docs/extended.adoc
@@ -495,6 +495,12 @@ _Example:_ `/comic lola bla`
 
 = app
 
+=== /presets
+List all presets
+
+_Example:_ `/presets`
+
+
 === /preset name:s
 Load a preset from a directory `name` under `user://presets/`.
 
