Add `/project/path` and `/assets/path/default`
`/project/path` sets a variable `$project` that can be reused.
`/asstes/path/default` allows to point back to original assets path set
in the `user://assets/animations` directory.

--- a/docs/extended.adoc
+++ b/docs/extended.adoc
@@ -9,6 +9,20 @@
 
 = info
 
+=== /project/path path:s
+Set a project path.
+
+_Example: `/project/path /home/yourname/projectname`
+
+_Usage: `/assets/path $project/assets/animations`
+
+
+=== /assets/path/default
+Set assets path to default location
+
+_Example:_ `/assets/path/default`
+
+
 === /commands
 Lists all available commands.
 
