--- a/docs/help.adoc
+++ b/docs/help.adoc
@@ -419,6 +419,15 @@ Undo the relationship of the `child` actor to its current parent.
 _Example:_ `/unparent lola`
 
 
+=== /tween/loop dur:f interpolation:s property:s actor:s from:f to:f
+Same as <<_tween,/tween>>, but looping back and forth between FROM and TO.
+
+
+_Example:_ `/tween/loop 1 expo /position/y foo 100 500`
+
+See also: <<_tween,/tween>>
+
+
 
 
 == animation data
@@ -1036,6 +1045,7 @@ Draw the ACTOR on top of everything else.
 === /tween dur:f transition:s property:s actor:s value:f
 
 Tweens a PROPERTY of an ACTOR between the current value and final VALUE in a span of time equal to DURation, in seconds. The TRANSITION must be one of: linear, sine, quint, quart, quad, expo, elastic, cubic, circ, bounce, back and spring.
+See also: <<_tween_loop,/tween/loop>>.
 
 === /unload animation:s
 
