Add multiple OSC remotes
Add a dictionary of OSC remotes that can be used to send messages to
different servers without having to set the IP and port every time.

To add a new server: `/osc/remote/add NAME IP PORT`
To remove a new server: `/osc/remote/remove NAME`
To change the IP: `/osc/remote/ip NAME IP`
To change the PORT: `/osc/remote/port NAME PORT`
To list servers: `/osc/remotes`

--- a/docs/extended.adoc
+++ b/docs/extended.adoc
@@ -545,16 +545,21 @@ See also: <<_type_actors_text,/type>>
 
 WARNING: Commands in this section are highly experimental. Proceed with caution.
 
-=== /comic actor:s animation:s
+=== /linefill actor:s animation:s
 Creates an `actor` with a pair of 2 `animation` 's.
 
 This allows to create actors with separate animations for line and fill colors.
 The `*-ln` actor is a child of the main (fill) actor.
 
-Suppose we want to create an animation named `bla` with separate fill and line colors. We would have to create 2 directories: one holding the line (`bla-ln`) art and the other the fill (`bla-fl`).
+Suppose we want to create an animation named `bla` with separate fill and line
+colors. We would have to create 2 directories: one holding the line (`bla-ln`)
+art and the other the fill (`bla-fl`).
 
-_Example:_ `/comic lola bla`
+_Example:_ `/linefill lola bla`
 
+
+=== /baloon actor:a msg:s
+Create a comic speech baloon.
 
 
 
