Fix `/def` docs

--- a/docs/help.adoc
+++ b/docs/help.adoc
@@ -803,7 +803,13 @@ Create an ACTOR that plays ANIMATION.
 
 === /def cmdName:s [args:v] subcommands:c
 
-Define a custom OSC command that is a list of other OSC commands. This may be recursive, so each SUBCOMMAND may reference one of the built-in commands, or another custom-defined command. Another way to define custom commands is via the file commands/init.osc. The CMDNAME string (first argument) may include argument names (ARG1 ... ARGN), which may be referenced as SUBCOMMAND arguments using $ARG1 ... $ARGN. Example: /def "/addsel actor anim" "/create $actor $anim" "/select $actor". 
+Define a custom OSC command that is a list of other OSC commands. This may be recursive, so each SUBCOMMAND may reference one of the built-in commands, or another custom-defined command. Another way to define custom commands is via the file commands/init.osc. The CMDNAME string (first argument) may include argument names (ARG1 ... ARGN), which may be referenced as SUBCOMMAND arguments using $ARG1 ... $ARGN.
+Example:
+
+/def  /addsel actor:a anim:s
+	/create $actor $anim
+	/select $actor.
+
 
 === /duplicate new_actor:a actor:a
 
