--- a/docs/help.adoc
+++ b/docs/help.adoc
@@ -706,6 +706,17 @@ See
 <<_midi_noteon_trig_free,/midi/noteon/trig/free>>
 <<_midi_noteon_velocity,/midi/noteon/velocity>>
 
+=== /utils
+
+utils
+
+
+
+
+== speech bubbles - comic dialog
+
+/free $name
+
 = core
 === /actors/list 
 
